hphp/hack/test/typecheck/like_types/dynamic_coercion/lambda_declared.php.like_types.exp
File "lambda_declared.php", line 10, characters 6-7:
Invalid argument (Typing[4110])
File "lambda_declared.php", line 7, characters 9-11:
Expected int
File "lambda_declared.php", line 4, characters 12-18:
But got dynamic
File "lambda_declared.php", line 14, characters 9-21:
Wrong type hint (Typing[4110])
File "lambda_declared.php", line 14, characters 9-21:
Expected (int, string)
File "lambda_declared.php", line 14, characters 9-21:
But got dynamic because it is an unenforceable type
File "lambda_declared.php", line 14, characters 9-21:
Wrong type hint (Typing[4110])
File "lambda_declared.php", line 14, characters 10-12:
Expected int
File "lambda_declared.php", line 14, characters 10-12:
But got dynamic because it is an unenforceable type
